Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.0 Beta 2
-
Windows 10 msvc2015 32bit Qt 5.9.Beta2
-
1a7bc520c5df4da80b7e65acbec1f546f9c87870 (qttools/5.9, 21.4.2017, 5.9b3)
Description
- Open and build the attached project
- Run windeployqt (--quick --qmldir <project source dir>)
- Everything (including the controls plugin) seems to be deployed
- Run the application from explorer
- Application does not start
I get this error using a debug view:
QQmlApplicationEngine failed to load component
QML debugging is enabled. Only use this in a safe environment.
qrc:/main.qml:16 Type ScrollView unavailable
qrc:/QtQuick/Controls/ScrollView.qml:-1 No such file or directory
For some reason the Controls 1 .qml files are not available from the resources.
This is critical for Qt Creator, since it still uses Controls 1.
Attachments
Issue Links
- relates to
-
QTBUG-60536 [WinRT]App fails to load completely
-
- Closed
-
- resulted from
-
QTCREATORBUG-18027 [REG 5.8.0 -> 5.9.0 Beta 1] Designer crashes
-
- Closed
-
For Gerrit Dashboard: QTBUG-60258 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
192207,3 | windeployqt: Adapt to QML cache files | 5.9 | qt/qttools | Status: MERGED | +2 | 0 |