windeployqt: Adapt to QML cache files

Extend the file filters to match cache files and deploy complete
directories for Quick Controls 1 if cache files are detected.

Task-number: QTBUG-60258
Change-Id: I903789b1cbca0e747fa4198230b3b917b68ab27b
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>